--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "gulp-htmlmin": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.0",
+    "gulp-material-icons": "^1.0.3",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-svg2png": "^0.3.0",
+    "gulp-svg-sprites": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
     "he": "^0.5.0",
