--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gulp",
-    "start": "gulp clean && gulp release",
-    "publish": "gulp clean && gulp release"
+    "start": "NODE_ENV=dev gulp serve",
+    "release": "gulp clean && gulp release"
   },
   "devDependencies": {
     "browserify": "^8.1.1",
@@ -20,6 +20,7 @@
     "gulp": "^3.8.10",
     "gulp-compass": "^2.0.3",
     "gulp-cssnext": "^0.6.0",
+    "gulp-gh-pages": "^0.5.0",
     "gulp-htmlmin": "^1.0.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.0",
@@ -27,8 +28,8 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-svg2png": "^0.3.0",
     "gulp-svg-sprites": "^2.0.1",
+    "gulp-svg2png": "^0.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
     "he": "^0.5.0",
