--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gulp",
-    "start": "gulp clean && gulp release",
+    "start": "NODE_ENV=dev gulp serve",
     "release": "gulp clean && gulp release"
   },
   "devDependencies": {
