Revert "General changes."
This reverts commit d5ffaa093089a85d63fbf31fccb8e1e2bef8b7f4.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gulp",
-    "start": "NODE_ENV=dev gulp serve",
+    "start": "gulp clean && gulp release",
     "release": "gulp clean && gulp release"
   },
   "devDependencies": {
